<resources>
    <string name="app_name">Habit tracker</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="button_to_add_a_habit">button to add a habit</string>
    <string name="save">Save</string>
    <string name="name_of_the_habit">Name of the habit</string>
    <string name="describe_of_the_habit">Describe of the habit</string>
    <string name="priority">Priority</string>
    <string name="priority_text">Priority:</string>
    <string name="good">Good</string>
    <string name="bad">Bad</string>
    <string name="count">count</string>
    <string name="data">data</string>

    <string name="habbit_in_period">%1$d times in %2$d days</string>

    <string-array name="priority">
        <item>High</item>
        <item>Middle</item>
        <item>Low</item>
    </string-array>
</resources>