<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.HabitFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/define_padding"
        >

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/fragment_habit_textInputLayout_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name_of_the_habit"
            app:counterEnabled="true"
            app:counterMaxLength="50"
            app:endIconMode="clear_text"
            app:helperText="@string/name_of_the_habit"
            app:helperTextEnabled="true"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/fragment_habit_textInputLayout_describe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/define_margin"
            android:hint="@string/describe_of_the_habit"
            app:counterEnabled="true"
            app:counterMaxLength="50"
            app:endIconMode="clear_text"
            app:helperText="@string/describe_of_the_habit"
            app:helperTextEnabled="true"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fragment_habit_textInputLayout_name">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/fragment_habit_textView_priority"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/priority_text"
            android:layout_margin="36dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/fragment_habit_spinner_priority"
            app:layout_constraintTop_toBottomOf="@id/fragment_habit_textInputLayout_describe"/>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/fragment_habit_spinner_priority"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="36dp"
            android:hint="@string/priority"
            android:layout_marginVertical="@dimen/define_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/fragment_habit_textView_priority"
            app:layout_constraintTop_toBottomOf="@id/fragment_habit_textInputLayout_describe">

            <androidx.appcompat.widget.AppCompatSpinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/priority"/>
        </com.google.android.material.textfield.TextInputLayout>

        <RadioGroup
            android:id="@+id/fragment_habit_radioGroup_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="36dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fragment_habit_spinner_priority">

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/good"/>

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bad"/>
        </RadioGroup>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/fragment_habit_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/count"
            app:counterEnabled="true"
            app:counterMaxLength="10"
            app:endIconMode="clear_text"
            app:helperText="@string/count"
            app:helperTextEnabled="true"
            android:minWidth="100dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/fragment_habit_data"
            app:layout_constraintTop_toBottomOf="@id/fragment_habit_radioGroup_type">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"/>

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/fragment_habit_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/data"
            app:counterEnabled="true"
            app:counterMaxLength="50"
            android:minWidth="100dp"
            app:endIconMode="clear_text"
            app:helperText="@string/data"
            app:helperTextEnabled="true"
            android:layout_marginHorizontal="36dp"
            app:layout_constraintStart_toEndOf="@id/fragment_habit_count"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fragment_habit_radioGroup_type">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"/>


        </com.google.android.material.textfield.TextInputLayout>
        <Button
            android:id="@+id/fragment_habit_button_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>